--- a/studio/public/scripts/components/grids/featuresGrid.html
+++ b/studio/public/scripts/components/grids/featuresGrid.html
@@ -12,7 +12,14 @@
 
         <div class="grid-row-headers" ng-style="{ left: padding, top: originY }">
 
-            <div class="grid-row-header" ng-style="{ width: rowHeaderWidth }">
+            <div class="grid-row-feature-count-header" ng-style="{ width: rowHeaderWidth, height: 200 }">
+
+                <div class="grid-feature-count">{{gridFeatures.length}}</div>
+                <div class="grid-feature-count-title">Features</div>
+
+            </div>
+
+            <div class="grid-row-header" ng-style="{ width: rowHeaderWidth, top: 200 + padding }">
 
                 <div>Observation Count</div>
                 <div>Mean</div>
@@ -27,7 +34,7 @@
 
             </div>
 
-            <div class="grid-row-header" ng-style="{ width: rowHeaderWidth, top: 10 * rowHeight + padding }">
+            <div class="grid-row-header" ng-style="{ width: rowHeaderWidth, top: 200 + padding + 10 * rowHeight + padding }">
 
                 <div ng-repeat="index in indexes">{{index}}</div>
 
@@ -40,6 +47,23 @@
     <div id="grid-content-container">
 
         <div class="grid-content" ng-style="{ left: rowHeaderWidth + 2 * padding, top: rowHeight + 2 * padding, width: gridWidth, height: gridHeight }">
+
+            <div class="grid-content-row" ng-style="{ height: 200 + padding }">
+
+                <!--<div class="hist-container" ng-repeat="feature in data" ng-style="{ width: columnWidth, left: $index * (columnWidth + padding) }">-->
+
+                    <!--<statistics-histogram values="feature"></statistics-histogram>-->
+
+                <!--</div>-->
+
+                <div class="hist-container" ng-repeat="feature in gridFeatures" ng-style="{ width: columnWidth, left: $index * (columnWidth + padding) }">
+
+                    <statistics-bar-chart values="feature"></statistics-bar-chart>
+
+                </div>
+
+            </div>
+
 
             <div class="grid-content-row" ng-style="{ height: 10 * rowHeight + padding }">
 
