--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -335,19 +335,73 @@ button.diagram-evaluating { color: #2ca02c; }
 #explore-container { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); color: #666; }
 .explore-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #f9f9f9; visibility: hidden; overflow: hidden; }
 .explore-content.active { visibility: visible; }
-.chart-content { position: relative; float: left; height: 100%; }
+
+.chart-content { position: relative; float: left; height: 100%; -webkit-transition: width 0.25s ease-in; }
 #chart-menu-container { width: 25%; border-right: 1px solid #e5e5e5; }
+.chart-fade.ng-hide-remove { transition: 0.5s linear all; opacity: 1; }
+.chart-fade.ng-hide { transition: 0.5s linear all; opacity: 0; }
+.chart-content-expand { width: 100%; -webkit-transition: width 0.75s ease-out; }
 #chart-container { width: 75%; background-color: #fff; }
 #chart-menu { width: 100%; height: -webkit-calc(100% - 30px); margin-top: 30px; padding: 4px 10px 4px 10px; overflow-x: hidden; overflow-y: scroll; }
 .chart-menu-header { width: 100%; height: 30px; color: #666; line-height: 30px; font-size: 1.2em; }
 .chart-menu-header i+i { margin-left: 6px; }
+.chart-menu-header:hover { cursor: default; }
 .chart-menu-item { margin: 10px 0 10px 0; }
 .add-series { background-color: #fff; border-radius: 6px; border: 2px dashed #989898; padding: 10px; }
+.add-series:hover { cursor: default; }
 .add-series-item { margin-bottom: 8px; }
 .add-series-footer { height: 34px; }
 .chart-series { position: relative; background-color: #fff; margin: 10px 0 10px 0; padding: 6px; outline: 1px solid #e9e9e9; }
-.series-color { float: left; width: 28px; height: 28px; line-height: 28px; border-radius: 50%; text-align: center; vertical-align: middle; }
-.series-coords { float: left; margin-left: 5px; }
+.chart-series.ng-enter { -webkit-animation: fadeIn 0.25s; }
+.chart-series.ng-leave { -webkit-animation: fadeOut 0.25s; }
+.series-selector {
+    float: left;
+    width: 28px;
+    height: 28px;
+    line-height: 28px;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-transform-style: preserve-3d;
+        -ms-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+}
+.series-face { backface-visibility: hidden; -webkit-backface-visibility: hidden; -ms-backface-visibility: hidden; }
+.series-front {
+    float: left;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    color: #f9f9f9;
+    line-height: 28px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    position: absolute;
+}
+.series-back {
+    float: left;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    color: #f9f9f9;
+    line-height: 28px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    position: absolute;
+    -webkit-transform: rotateY( 180deg );
+        -ms-transform: rotateY( 180deg );
+            transform: rotateY( 180deg );
+}
+.series-front-to-back { -webkit-transition: 0.25s ease-in-out; -webkit-transform: rotateY( 180deg ); }
+.series-back-to-front { -webkit-transition: 0.25s ease-in-out; -webkit-transform: rotateY( 360deg ); }
+.series-coords { float: left; margin-left: 6px; }
+.series-coords:hover { cursor: default; }
+.series-expand:hover { cursor: pointer; color: #3182bd; }
+.hide-chart-menu:hover { cursor: pointer; color: #3182bd; }
+.y-coord { width: 100%; height: 28px; line-height: 28px; vertical-align: middle; }
+.x-y-coord-container { width: 100%; height: 28px; }
+.x-y-coord { width: 100%; height: 14px; line-height: 14px; vertical-align: middle; }
 
 .explore-toolbar { position: absolute; top: 0; left: 0; width: 100%; height: 30px; margin: 0; padding: 4px 10px 4px 10px; background-color: #f9f9f9; font-size: 1.2em; }
 .toolbar-icon { position: relative; height: 21px; width: 21px; cursor: pointer; }
@@ -374,6 +428,7 @@ button.diagram-evaluating { color: #2ca02c; }
 .grid-column-header { position: absolute; height: 36px; line-height: 36px; top: 0; background-color: #fff; font-weight: bold; border: 1px solid #e9e9e9; border-bottom: 3px solid #e9e9e9; vertical-align: middle; padding-left: 10px; }
 .grid-row-container { position: absolute; background: #f9f9f9; left: 0; z-index: 2; }
 .grid-row-headers { position: absolute; }
+.grid-row-feature-count-header { font-weight: bold; position: absolute; left: 0; background: #fff; padding: 10px; border: 1px solid #e9e9e9; border-right: 3px solid #e9e9e9; }
 .grid-row-header { position: absolute; left: 0; background: #fff; font-weight: bold; border: 1px solid #e9e9e9; border-right: 3px solid #e9e9e9; }
 .grid-row-header div { height: 36px; line-height: 36px; vertical-align: middle; text-align: right; padding-right: 10px; }
 .grid-row-header div+div { border-top: 1px solid #e9e9e9; }
@@ -383,7 +438,10 @@ button.diagram-evaluating { color: #2ca02c; }
 .grid-content-column { position: absolute; background: #fff; border: 1px solid #e9e9e9; }
 .grid-content-column div { height: 36px; line-height: 36px; vertical-align: middle; text-align: right; padding-right: 10px; }
 .grid-content-column div+div { border-top: 1px solid #e9e9e9; }
-
+.grid-feature-count { width: 100%; height: 148px; line-height: 148px; vertical-align: middle; text-align: center; font-size: 6.0em; }
+.grid-feature-count-title { width: 100%; height: 30px; line-height: 30px; vertical-align: middle; text-align: center; font-size: 1.5em; }
+.hist-container { position: absolute; height: 200px; background: #fff; border: 1px solid #e9e9e9; }
+.bar { fill: steelblue; }
 
 /*
 .chart-menus { position: absolute; top: 0; left: 0; background-color: #f9f9f9; height: 100%; width: 25%; border-right: 1px solid #e5e5e5; -webkit-transition: width 0.75s ease-in; }
