--- a/studio/public/scripts/components/modal/modal.html
+++ b/studio/public/scripts/components/modal/modal.html
@@ -10,8 +10,8 @@
     </div>
 
     <div class="emr-modal-footer">
-        <button type="button" class="btn btn-default" ng-click="onClose()">{{::config.cancel || 'Cancel'}}</button>
-        <button type="button" class="btn btn-success" ng-click="onSave()">{{::config.save || 'Save'}}</button>
+        <button type="button" class="btn btn-default" ng-click="onClose()" ng-show="config.showCancel">{{::config.cancel || 'Cancel'}}</button>
+        <button type="button" class="btn btn-success" ng-click="onSave()" ng-show="config.showSave">{{::config.save || 'Save'}}</button>
     </div>
 
 </div>
