--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -601,5 +601,17 @@ button.diagram-evaluating { color: #2ca02c; }
 
 #dashboard-wrapper { width: 100%; height: 100%; background-color: #e5e5e5; }
 
-.dashboard-card { position: relative; background-color: #fff; height: 200px; margin: 15px 0 15px 0; padding: 6px; border-radius: 4px; border: 1px solid #d9d9d9; }
+#dashboard-cards { position: relative; padding: 15px; }
+#dashboard-cards .row { padding: 0 15px 0 15px; }
+.dashboard-card { position: relative; background-color: #fff; margin: 15px 0 15px 0; border-radius: 4px; border: 1px solid #d9d9d9; cursor: pointer; }
+.card-value { width: 100%; padding: 6px 0 6px 0; text-align: center; font-size: 4em; color: #666; }
+.card-label { width: 100%; background-color: #f5f5f5; padding: 6px 0 6px 0; text-align: center; font-size: 1.3em; border-radius: 0 0 4px 4px; border-top: 1px solid #d9d9d9; color: #707070; }
 
+#card-selector-wrapper { position: absolute; padding: 6px; transition: left .2s; }
+.card-selector { position: relative; width: 100%; height: 100%; border-radius: 4px; border: 1px solid #6baed6; background-color: #c6dbef; }
+
+#dashboard-jobs { position: relative; padding: 0 30px 0 30px; }
+.dashboard-job { width: 100%; margin-bottom: 15px; padding: 15px; background-color: #fff; border-radius: 4px; border: 1px solid #d9d9d9; font-size: 1.1em; }
+.dashboard-job-kill { cursor: pointer; }
+
+#dashboard-job-header { width: 100%; margin: 15px 0 15px 0; padding: 0 15px 5px 15px; border-bottom: 1px solid #888; font-size: 1.1em; color: #888; }
