--- a/studio/public/templates/dashboard.html
+++ b/studio/public/templates/dashboard.html
@@ -2,31 +2,92 @@
 
     <div class="navbar"></div>
 
-    <div class="dashboard-cards container-fluid">
+    <div id="dashboard-cards" class="container-fluid">
+
+        <div id="card-selector-wrapper" ng-style="{'left': (selector.index * selector.width + 15) + 'px', 'height': selector.height + 'px', 'width': selector.width + 'px' }">
+
+            <div class="card-selector"></div>
+
+        </div>
 
         <div class="row">
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-xs-3">
 
-                <div class="dashboard-card"></div>
-
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-
-                <div class="dashboard-card"></div>
+                    <div class="dashboard-card" ng-click="activeCard(0)">
+                        <div class="card-value">{{cards.online}}</div>
+                        <div class="card-label">Online</div>
+                    </div>
 
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-xs-3">
 
-                <div class="dashboard-card"></div>
+                <div class="dashboard-card" ng-click="activeCard(1)">
+                    <div class="card-value">{{cards.online}}</div>
+                    <div class="card-label">Data Streams</div>
+                </div>
 
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-xs-3">
 
-                <div class="dashboard-card"></div>
+                <div class="dashboard-card" ng-click="activeCard(2)">
+                    <div class="card-value">{{cards.offline}}</div>
+                    <div class="card-label">Offline</div>
+                </div>
+
+            </div>
+
+            <div class="col-xs-3">
+
+                <div class="dashboard-card" ng-click="activeCard(3)">
+                    <div class="card-value">0</div>
+                    <div class="card-label">Notifications</div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <div id="dashboard-jobs">
+
+        <div ng-if="jobs.length > 0" id="dashboard-job-header" class="container">
+
+            <div class="row">
+
+                <div class="col-xs-2">Name</div>
+
+                <div class="col-xs-2">Start</div>
+
+                <div class="col-xs-2">Last Prediction</div>
+
+                <div class="col-xs-5">Trend</div>
+
+                <div class="col-xs-1"></div>
+
+            </div>
+
+        </div>
+
+        <div class="dashboard-job container" ng-repeat="job in jobs">
+
+            <div class="row">
+
+                <div class="col-xs-2">{{::job.diagramName}}</div>
+
+                <div class="col-xs-2">{{::formatDate(job.started)}}</div>
+
+                <div class="col-xs-2"></div>
+
+                <div class="col-xs-5"></div>
+
+                <div class="col-xs-1">
+                    <i ng-if="!job.killing" class="fa fa-times dashboard-job-kill pull-right" ng-click="kill(job, $event)"></i>
+                    <i ng-if="job.killing" class="fa fa-spinner fa-spin pull-right"></i>
+                </div>
 
             </div>
 
