Added panel resize to the west.

--- a/studio/public/scripts/components/panel/panel.html
+++ b/studio/public/scripts/components/panel/panel.html
@@ -21,6 +21,8 @@
     </div>
     <div class="emr-panel-footer"></div>
     <div class="resizable-handle resizable-e" ng-mousedown="onResize($event, 'e')"></div>
-    <div class="resizable-handle resizable-s" ng-mousedown="onResize($event, 's')"></div>
+    <div class="resizable-handle resizable-w" ng-mousedown="onResize($event, 'w')"></div>
     <div class="resizable-handle resizable-se" ng-mousedown="onResize($event, 'se')"></div>
+    <div class="resizable-handle resizable-sw" ng-mousedown="onResize($event, 'sw')"></div>
+    <div class="resizable-handle resizable-s" ng-mousedown="onResize($event, 's')"></div>
 </div>
