--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -592,8 +592,10 @@ button.diagram-evaluating { color: #2ca02c; }
 /* resizable controls */
 .resizable-handle { position: absolute; font-size: 0.1px; }
 .resizable-e { cursor: e-resize; width: 7px; height: 100%; top: 0; right:-5px; }
+.resizable-w { cursor: w-resize; width: 7px; height: 100%; top: 0; left:-5px; }
 .resizable-s { cursor: s-resize; width: 100%; height: 7px; left: 0; bottom:-5px; }
 .resizable-se { cursor: se-resize; width: 16px; height: 16px; right: 0; bottom: 0; }
+.resizable-sw { cursor: sw-resize; width: 16px; height: 16px; left: 0; bottom: 0; }
 
 /**
  * Dashboard
