Added axes configuration to explore view.

--- a/diagram-interpreter/src/main/resources/sparkstreaming_driver.mustache
+++ b/diagram-interpreter/src/main/resources/sparkstreaming_driver.mustache
@@ -36,6 +36,8 @@ val <%variableName%> = <%className%>.<%methodName%>(<%& arguments%>)
 
 <%#terminatingOperations%>
 
+<%input%>.foreachRDD(rdd => if (!rdd.isEmpty()) rdd.foreach(value => Requests.postOpc(<%& url%>, <%& tag%>, value)))
+
 <%/terminatingOperations%>
 
 ssc.start()
