--- a/studio/public/scripts/views/explore.html
+++ b/studio/public/scripts/views/explore.html
@@ -38,6 +38,23 @@
                         <option value="scatter">XY Scatter</option>
                     </select>
 
+                    <div id="chart-axes-controls">
+
+                        <div class="chart-menu-header">
+                            <div class="pull-left">Axes</div>
+                        </div>
+
+                        <div class="radio-inline">
+                            <span><input type="radio" name="radioScale" ng-model="chartOptions.scaled" ng-change="toggleScale()" ng-value="false">Actual</span>
+                        </div>
+
+                        <div class="radio-inline">
+                            <span><input type="radio" name="radioScale" ng-model="chartOptions.scaled" ng-change="toggleScale()" ng-value="true">Scaled</span>
+                        </div>
+
+                        <range-slider min-limit="chartOptions.y.min" min-value="chartOptions.y.minActual" max-limit="chartOptions.y.max" max-value="chartOptions.y.maxActual" disabled="rangeSliderDisabled"></range-slider>
+                    </div>
+
                     <div class="chart-menu-header">
                         <div class="pull-left">Series</div>
                         <div class="pull-right">
@@ -60,11 +77,11 @@
                         </div>
                         <div class="series-coords">
                             <div class="x-y-coord-container" ng-show="hasXCoordinate()">
-                                <div class="x-y-coord">{{item.x}}</div>
-                                <div class="x-y-coord">{{item.y}}</div>
+                                <div class="x-y-coord">{{item.x.name}}</div>
+                                <div class="x-y-coord">{{item.y.name}}</div>
                             </div>
                             <div class="y-coord" ng-show="!hasXCoordinate()">
-                                {{item.y}}
+                                {{item.y.name}}
                             </div>
                         </div>
                         <div style="clear: both;"></div>
@@ -74,15 +91,15 @@
 
                         <div ng-show="hasXCoordinate()" class="add-series-item input-group">
                             <span class="input-group-addon">X</span>
-                            <select class="form-control" ng-model="newSeries.x">
-                                <option ng-repeat="feature in features" ng-selected="feature==newSeries.x" value="{{feature.column}}" ng-if="$index > 0">{{feature.column}}</option>
+                            <select class="form-control" ng-model="newSeries.x.name" ng-change="selectFeature('x')">
+                                <option ng-repeat="feature in features" ng-selected="feature==newSeries.x.name" value="{{feature.column}}" ng-if="$index > 0">{{feature.column}}</option>
                             </select>
                         </div>
 
                         <div class="add-series-item input-group">
                             <span class="input-group-addon">Y</span>
-                            <select class="form-control" ng-model="newSeries.y">
-                                <option ng-repeat="feature in features" ng-selected="feature.column==newSeries.y" value="{{feature.column}}" ng-if="$index > 0">{{feature.column}}</option>
+                            <select class="form-control" ng-model="newSeries.y.name" ng-change="selectFeature('y')">
+                                <option ng-repeat="feature in features" ng-selected="feature.column==newSeries.y.name" value="{{feature.column}}" ng-if="$index > 0">{{feature.column}}</option>
                             </select>
                         </div>
 
@@ -97,7 +114,7 @@
             </div>
 
             <div id="chart-container" class="chart-content">
-                <div id="loader-overlay" ng-if="rendering" style="background-color: #fff">
+                <div id="loader-overlay" ng-if="fetching || rendering" style="background-color: #fff">
                     <div class="loader"></div>
                 </div>
 
