--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="@routes.Assets.at("scripts/shared/draggable.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/browser/browser.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/charts/charts.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/controls/controls.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/grids/grids.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramViewModel.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagram.js")"></script>
