--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -344,6 +344,16 @@ button.diagram-evaluating { color: #2ca02c; }
 .emr-modal-footer { text-align: right; padding-right: 20px; }
 .emr-modal-footer .btn+.btn { margin-left: 20px; }
 
+#chart-axes-controls { position: relative; width: 100%; margin: 15px 0 10px 0; }
+#chart-axes-controls .radio-inline { margin-right: 20px; }
+
+/* range slider */
+.range-slider { position: relative; width: 100%; height: 38px; margin-top: 5px; }
+.range-slider input { pointer-events: none; position: absolute; top: 0; left: 0; }
+.range-slider input::-webkit-slider-thumb { pointer-events: all; position: relative; z-index: 1; outline: 0; }
+.range-slider-labels { position: absolute; width: 100%; height: 20px; top: 18px; }
+.range-slider-label { font-size: 0.8em; }
+
 /* explore view */
 #explore-wrapper { height: 100%; width: 100%; margin: 0; padding: 0; }
 #explore-tabs { display: block; position: relative; float: left; height: 100%; width: 70px; margin: 0; padding: 0; background-color: #e5e5e5; }
