--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -62,8 +62,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-4">
+                    <!--<button type="button" class="btn btn-default navbar-btn pull-left" ng-click="toggleDiagramNavigation($event)">-->
                     <button type="button" class="btn btn-default navbar-btn pull-left" ng-click="toggleDiagrams()">
-                        <i class="fa fa-bars"></i>
+                        <i class="fa fa-folder-open"></i>
                     </button>
                     <span class="navbar-title">{{diagramViewModel.data.name}}</span>
                 </div>
