Added load file block and removed load cvs block. Modified Save DB block and also continued working on nav control.

--- a/studio/public/scripts/components/diagram/diagramNavigation.html
+++ b/studio/public/scripts/components/diagram/diagramNavigation.html
@@ -41,19 +41,27 @@
                     <div class="nav-properties-field">Description</div>
                     <div class="nav-properties-value">{{page.description}}</div>
                 </div>
+                <!--<div class="nav-properties-field-wrapper">-->
+                    <!--<div class="nav-properties-field">Created</div>-->
+                <!--</div>-->
+                <!--<div class="nav-properties-field-wrapper">-->
+                    <!--<div class="nav-properties-field">Modified</div>-->
+                <!--</div>-->
+                <!--<div class="nav-properties-field-wrapper">-->
+                    <!--<div class="nav-properties-field">Last opened</div>-->
+                <!--</div>-->
                 <div class="nav-properties-field-wrapper">
-                    <div class="nav-properties-field">Created</div>
+                    <div class="nav-properties-field">Mode</div>
+                    <div class="nav-properties-value">{{page.mode}}</div>
                 </div>
                 <div class="nav-properties-field-wrapper">
-                    <div class="nav-properties-field">Modified</div>
+                    <div class="nav-properties-field">Target</div>
+                    <div class="nav-properties-value">{{page.targetEnvironment}}</div>
                 </div>
                 <div class="nav-properties-field-wrapper">
-                    <div class="nav-properties-field">Last opened</div>
+                    <div class="nav-properties-field">Version</div>
+                    <div class="nav-properties-value">{{page.version}}</div>
                 </div>
-                <div class="nav-properties-field-wrapper">
-                    <div class="nav-properties-field">Online</div>
-                </div>
-
             </div>
 
             <div class="nav-properties-footer">
