--- a/studio/public/stylesheets/diagram.css
+++ b/studio/public/stylesheets/diagram.css
@@ -72,203 +72,55 @@
  * Diagram Navigation
  */
 
-.diagram-navigation {
-    position: fixed;
-    z-index: 1000;
-    top: 60px;
-    left: 80px;
-    width: auto;
-    height: calc(100% - 300px);
-    height: -webkit-calc(100% - 300px);
-    height: -moz-calc(100% - 300px);
-    border-radius: 5px;
-    border: 1px solid #989898;
-    background-color: white;
-    box-shadow: 0px 6px 12px rgba(0,0,0,0.175);
-    border-top: 4px solid #1f77b4;
-}
+.diag-nav { position: fixed; z-index: 1000; top: 60px; left: 80px; width: auto; height: -webkit-calc(100% - 300px); border-radius: 5px; border: 1px solid #989898; box-shadow: 0px 6px 12px rgba(0,0,0,0.175); border-top: 4px solid #1f77b4; background-color: white; }
+.diag-nav.ng-enter { -webkit-animation: fadeIn 0.4s; }
+.diag-nav.ng-leave { -webkit-animation: fadeOut 0.4s; }
+.diag-nav:before { content: ""; position: absolute; top: -20px; left: 7.5px; border-right: 17px solid transparent; border-left: 17px solid transparent; border-bottom: 17px solid #1f77b4; }
+.diag-nav:after { content: ""; position: absolute; top: -19px; left: 7.5px; border-right: 17px solid transparent; border-left: 17px solid transparent; border-bottom: 17px solid #1f77b4; }
+.diag-nav-item { width: 100%; height: 25px; -webkit-user-select: none; }
+.diag-nav-item:hover { cursor: pointer; font-weight: bold; color: #1f77b4; }
 
-.diagram-navigation.ng-enter { -webkit-animation: fadeIn 0.4s; }
+.nav-page { width: 175px; height: -webkit-calc(100% - 29px); float: left; border-left: 1px solid #d3d3d3; padding: 10px; padding-right: 5px;  overflow-y: auto; background-color: white; }
+.nav-page-override { border-left: 0px solid #d3d3d3; }
+.nav-page-width-override { width: 235px; padding: 0px; padding-right: 0px; }
+.nav-page-highlight-file { font-weight: bold; }
+.nav-page-file-type { margin-right: 5px; }
 
-.diagram-navigation.ng-leave { -webkit-animation: fadeOut 0.4s; }
+.nav-footer { position: absolute; bottom: 0px; left: 0px; width: 100%; height: 30px; border-top: 1px solid #d3d3d3; }
+.nav-footer:hover { cursor: default; }
 
-.diagram-navigation:before {
-    content: "";
-    position: absolute;
-    top: -20px;
-    left: 7.5px;
-    border-right: 17px solid transparent;
-    border-left: 17px solid transparent;
-    border-bottom: 17px solid #1f77b4;
-}
+.nav-add { height: 29px; width: 30px; text-align: center; vertical-align: middle; line-height: 29px; border-right: 1px solid #d3d3d3; float: left; }
+.nav-add:hover { cursor: pointer; color: #1f77b4; }
 
-.diagram-navigation:after {
-    content: "";
-    position: absolute;
-    top: -19px;
-    left: 7.5px;
-    border-right: 17px solid transparent;
-    border-left: 17px solid transparent;
-    border-bottom: 17px solid #1f77b4;
-}
+.nav-path { height: 29px; width: auto; padding-left: 5px; vertical-align: middle; line-height: 29px; float: left; }
+.nav-path-file-type { height: 29px; width: auto; float: left; }
+.nav-path-item { height: 29px; float: left; }
+.nav-path-item-clickable { float: left; margin-right: 3px; }
+.nav-path-item-clickable:hover { cursor: pointer; color: #1f77b4; }
+.nav-path-item-caret { float: left; margin-right: 3px; }
 
-.diagram-navigation-item {
-    width: 100%;
-    height: 25px;
-    -webkit-user-select: none;
-}
+.nav-props-wrapper { width: 100%; height: 100%; }
+.nav-props-body { font-size: 13px; width: 100%; height: -webkit-calc(100% - 49px); padding: 10px; }
+.nav-props:hover { cursor: default; }
+.nav-props-title { color: #989898; font-weight: normal; margin-bottom: 2px; height: 40px; line-height: 40px; width: 100%; text-align: center; vertical-align: middle; font-size: 1.5em; }
+.nav-props-title:hover { cursor: default; }
+.nav-props-value { font-size: 14px; height: 30px; line-height: 30px; vertical-align: middle; font-weight: bold; }
+.nav-props-value:hover { cursor: default; }
+.nav-props-footer { height: 49px; width: 100%; }
+.nav-props-icon { height: 49px; line-height: 49px; width: 50px; text-align: center; vertical-align: middle; }
+.nav-props-icon:hover { cursor: pointer; color: #1f77b4; }
 
-.diagram-navigation-item:hover {
-    cursor: pointer;
-    font-weight: bold;
-    color: #1f77b4;
-}
-
-.nav-page {
-    width: 175px;
-    height: -webkit-calc(100% - 29px);
-    float: left;
-    border-left: 1px solid #d3d3d3;
-    padding: 10px;
-    padding-right: 5px;
-}
-
-.nav-page-override {
-    border-left: 0px solid #d3d3d3;
-}
-
-.nav-page-width-override {
-    width: 225px;
-    padding: 0px;
-    padding-right: 0px;
-}
-
-.nav-file-type {
-    margin-right: 5px;
-}
-
-.nav-footer {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 30px;
-    border-top: 1px solid #d3d3d3;
-}
-
-.nav-footer:hover {
-    cursor: default;
-}
-
-.nav-add {
-    height: 29px;
-    width: 30px;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 29px;
-    border-right: 1px solid #d3d3d3;
-    float: left;
-}
-
-.nav-add:hover {
-    cursor: pointer;
-    color: #1f77b4;
-}
-
-.nav-path {
-    height: 29px;
-    width: auto;
-    padding-left: 10px;
-    vertical-align: middle;
-    line-height: 29px;
-    float: left;
-}
-
-.nav-path-file-type {
-    height: 29px;
-    width: auto;
-    float: left;
-}
-
-.nav-properties-wrapper {
-    width: 100%;
-    height: 100%;
-}
-
-.nav-properties {
-    width: 100%;
-    height: -webkit-calc(100% - 30px);
-    padding: 5px;
-}
-
-.nav-properties:hover {
-    cursor: default;
-}
-
-.nav-properties-title {
-    height: 50px;
-    line-height: 50px;
-    width: 100%;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 1.8em;
-    font-weight: bold;
-    margin-bottom: 40px;
-}
-
-.nav-properties-field-wrapper {
-    width: 194px;
-    height: 20px;
-    margin-bottom: 3px;
-}
-
-.nav-properties-field {
-    height: 20px;
-    line-height: 20px;
-    width: 72px;
-    text-align: right;
-    vertical-align: middle;
-    font-size: 0.85em;
-    font-weight: bold;
-    color: grey;
-    margin-right: 5px;
-    float: left;
-}
-
-.nav-properties-value {
-    height: 20px;
-    line-height: 20px;
-    width: 117px;
-    text-align: left;
-    vertical-align: middle;
-    font-size: 0.85em;
-    float: left;
-}
-
-.nav-file-color {
-    font-weight: bold;
-}
-
-.nav-properties-footer {
-    height: 30px;
-    width: 100%;
-    border-top: 1px solid #d3d3d3;
-}
-
-.nav-properties-icon {
-    float: left;
-    height: 29px;
-    width: 30px;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 29px;
-    border-right: 1px solid #d3d3d3;
-}
-
-.nav-properties-icon:hover {
-    cursor: pointer;
-    color: #1f77b4;
-}
+.nav-create-wrapper { width: 100%; height: 100%; }
+.nav-create-body { font-size: 13px; width: 100%; height: -webkit-calc(100% - 49px); padding: 10px; }
+.nav-create-footer { height: 49px; width: 100%; padding: 10px; }
+.nav-create-footer-btn-margin-right { margin-right: 10px; }
+.nav-create-category-container { height: 30px; width: 100%; }
+.nav-create-category-container-item { float: left; }
+.nav-create-category-select { width: -webkit-calc(100% - 42px); margin-right: 5px; }
+.nav-create-new-category { height: auto; width: 100%; }
+.nav-create-item-height { font-size: 12px; height: 30px; line-height: 19px; }
+.nav-create-title { color: #989898; font-weight: normal; margin-bottom: 2px; height: 28px; line-height: 28px; width: 100%; text-align: center; vertical-align: middle; font-size: 1.5em; }
+.nav-create-title:hover { cursor: default; }
 
 /*
  * Diagram Configuration
